--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "aos": "^3.0.0-beta.6",
     "axios": "^0.18.0",
     "express": "^4.16.4",
     "vue": "^2.5.2",
