--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "aos": "^3.0.0-beta.6",
     "axios": "^0.18.0",
     "express": "^4.16.4",
+    "vee-validate": "^2.2.7",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.1"
