--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "aos": "^3.0.0-beta.6",
     "axios": "^0.18.0",
     "express": "^4.16.4",
+    "sweetalert2": "^8.11.0",
     "vee-validate": "^2.2.7",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
+    "vue-session": "^1.0.0",
+    "vuetify": "^1.5.14",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
